force-app/main/default/objects/AKS_SimpleObject__c/AKS_SimpleObject__c.object-meta.xml
<CustomObject>
    <label>AKS_SimpleObject</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>AKSSimpleObjectNumber</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AKS_SimpleObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>