force-app/main/default/objects/AKS_SimpleObject__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LastName</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>