force-app/main/default/objects/AKS_SimpleObject__c/fields/TelNo__c.field-meta.xml
<CustomField>
    <fullName>TelNo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TelNo</label>
    <type>Phone</type>
</CustomField>